...
        group = "A",
        homeScore = 1,
        awayScore = 0
    ),
    Match(
        id = "GS-A-2",
        homeTeam = "Palmeiras",
        awayTeam = "River Plate",
        homeTeamCode = "PAL",
        awayTeamCode = "RIV",
        homeTeamFlag = "🐷",
        awayTeamFlag = "⚪️",
        matchDateMillis = now + (30 * 60 * 1000),
        phase = Phase.GROUP_STAGE,
        group = "A"
    ),
    Match(
        id = "GS-B-1",
        homeTeam = "Flamengo",
        awayTeam = "Peñarol",
        homeTeamCode = "FLA",
        awayTeamCode = "PEN",
        homeTeamFlag = "🔴",
        awayTeamFlag = "🟡",
        matchDateMillis = now + (24 * 60 * 60 * 1000),
...
